User verification flow